--- a/Cloudmarket/Cloudmarket.Web.csproj
+++ b/Cloudmarket/Cloudmarket.Web.csproj
@@ -200,6 +200,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\cadastro.css" />
     <Content Include="Content\css\carrinho.css" />
+    <Content Include="Content\css\compra.css" />
     <Content Include="Content\css\gerenciar-produtos.css" />
     <Content Include="Content\css\gerenciar-usuarios.css" />
     <Content Include="Content\css\home.css" />
@@ -290,6 +291,7 @@
     <Content Include="Scripts\compra\getConteudoListaParaTabelaCompra.js" />
     <Content Include="Scripts\tools\getConteudoListaParaTabelaCarrinho.js" />
     <Content Include="Scripts\tools\removerPopover.js" />
+    <Content Include="Scripts\tools\user.js" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
